Naprawiono link do artykułu "Realtime to the 1 Million!" w #44

--- a/_posts/2022-09-30-44.md
+++ b/_posts/2022-09-30-44.md
@@ -11,7 +11,7 @@ Cloudflare po raz kolejny na celowniku Patoarchitektów. Na co tym razem warto z
 
 
 Ciekawe linki i inne znaleziska z tego odcinka:
-* [Realtime to the 1 Million!](GitHub - appwrite/realtime-1-million: Learn how we built and tested our realtime server to 1M+ concurrent connections)
+* [Realtime to the 1 Million!](https://github.com/appwrite/realtime-1-million)
 * [R2 is now Generally Available](https://blog.cloudflare.com/r2-ga/)
 * [https://patoarchitekci.io/short](patoarchitekci.io/short)
 
